--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./static/favicon.png">
+    <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_1282719_ona9o08ygn9.css"> -->
     <title>资金管理系统</title>
   </head>
   <body>
