--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes” />
     <link rel="icon" href="./static/favicon.png">
     <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_1282719_ona9o08ygn9.css"> -->
     <title>资金管理系统</title>
