--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+    <!-- 
+      width=device-width   device-width=设备的宽度
+      initial-scale=1.0    设置页面的初始缩放比例
+      minimum-scale=1.0    设置页面的最小缩放比例
+      maximum-scale=1.0    设置页面的最大缩放比例
+      user-scalable=no     设置用户是否可以缩放操作
+     -->
+    <meta name="viewport" content="width=device-width,initial-scale=0.1,user-scalable=yes">
+    <!-- 
+      name:viewport：定义初始化窗口大小，仅供移动设备有用。
+     -->
+
     <link rel="icon" href="./static/favicon.png">
     <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_1282719_ona9o08ygn9.css"> -->
     <title>资金管理系统</title>
